--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"compile-dev": "node ./scripts/build.js --watch",
 		"lint": "eslint .",
 		"lintmd": "markdownlint *.md -i CHANGELOG.md",
-		"vscode:prepublish": "node ./scripts/minify_json.js && NODE_ENV=production node ./scripts/build.js",
+		"vscode:prepublish": "node ./scripts/minify_json.js && node ./scripts/build.js",
 		"watch": "tsc -watch -p ./",
 		"package": "vsce package",
 		"postpackage": "node ./scripts/minify_json.js --restore",
